--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Manage Restaurant</string>
-    <string name="title">News</string>
+    <string name="title">Title</string>
     <string name="login">Login</string>
     <string name="username">Username</string>
 
