--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,12 @@
     <string name="room">Room</string>
     <string name="building">Building</string>
 
+    <string name="titleHaveSpace">มีช่องว่าง</string>
+    <string name="messageHaveSpace">กรุณากรอกให้ครบทุกช่อง ค่ะ</string>
+    <string name="titleUserFalse">User False</string>
+    <string name="messageUserFalse">No This User in my Database</string>
+    <string name="titlePasswordFalse">Password False</string>
+    <string name="messagePasswordFalse">Please Try Again Password False</string>
+
 
 </resources>
