--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,5 @@
     <string name="food_group">Food Group</string>
     <string name="dev2">ให้ไปส่ง (ปกติให้รับเองที่ร้าน)</string>
 
-
+    <string name="numberFood">1</string>
 </resources>
